--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,9 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.hw3Gallery {
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+}
